added the metrics to Protobuf